# burnout

./: README.md  pyproject.toml
burnout/: main.py
tests/: test_burnout.py
