[tool.poetry]
name = "burnout"
version = "0.1.0"
description = ""
authors = ["Mário Feroldi <mferoldif@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytz = "^2019.2"
peewee = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
